feat: 작품 다운로드 여부 전달(#613)